kubernetes/applications/apps/monitoring-external/endpoints.yaml
# Endpoints for external services pointing to monitoring cluster Traefik LB
# All endpoints use the same Traefik LB IP:port - routing is by Host header
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: alertmanager-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: victoriametrics-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: victorialogs-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gatus-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: beszel-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: coroot-external
  namespace: apps
subsets:
  - addresses:
      - ip: 10.30.0.90
    ports:
      - name: http
        port: 80
        protocol: TCP
